fixed squashed todo effect

--- a/src/app/components/todo-list-ux/todo-list-ux.component.scss
+++ b/src/app/components/todo-list-ux/todo-list-ux.component.scss
@@ -36,7 +36,7 @@
 button {
     @include combineThemes();
     border: none;
-    margin: .5rem;
+    padding: 1rem;
 }
 .todo-filter button {
     @include clickable();
